# open-data-platform

./: .env.example  .gitignore  Makefile  PLAN.md  claude-bridge.py  docker-compose.yml
.claude/: settings.json
docs/: ARCHITECTURE.md  sample_workflow.md
examples/: seed.py
examples/sample-data/: customers.csv  orders.csv  products.csv
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infrastructure/clickhouse-init/: 00-create-database.sql
infrastructure/init-scripts/: 00-init.sql  01-audit.sql  02-classification.sql  03-lineage.sql  05-ai.sql
infrastructure/keycloak/: realm-export.json
services/ai-service/: Dockerfile  pyproject.toml
services/ai-service/src/: config.py  context.py  llm.py  main.py  seeder.py  vector_store.py
services/ai-service/src/routes/: chat.py  suggest.py  summarize.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/: main.py
services/api-gateway/src/middleware/: audit_mw.py  auth.py
services/api-gateway/src/routes/: ai.py  audit.py  auth.py  classification.py  datasets.py  explorer.py  lineage.py  ontology.py  pipelines.py
services/audit/: Dockerfile  pyproject.toml
services/ontology/: Dockerfile  pyproject.toml
services/ontology/src/: main.py
services/ontology/src/routes/: links.py  objects.py  types.py
services/pipelines/: Dockerfile  pyproject.toml
services/pipelines/dagster/: definitions.py  workspace.yaml
services/pipelines/dbt/: dbt_project.yml  profiles.yml
services/pipelines/dbt/models/: sources.yml
services/pipelines/dbt/models/marts/: mart_customer_orders.sql
services/pipelines/dbt/models/staging/: stg_customers.sql  stg_orders.sql
services/pipelines/src/: lineage_parser.py  main.py
shared/: config.py
shared/db/: audit_client.py  (+5 more)
(+24 files in other folders)
