[project]
name = "odp-ai-service"
version = "0.1.0"
description = "AI Service for ODP — NL to SQL, schema suggestion, summarization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "neo4j>=5.17.0",
    "pydantic-settings>=2.1.0",
]
