[project]
name = "odp-ontology-service"
version = "0.1.0"
description = "Ontology service - semantic layer over data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "neo4j>=5.17.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
]
