[project]
name = "odp-pipeline-service"
version = "0.1.0"
description = "Pipeline service - orchestration with Dagster and dbt"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dbt-core>=1.7.0",
    "dbt-clickhouse>=1.7.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "pandas>=2.2.0",
]
